--- a/Final Project/Final Project.csproj
+++ b/Final Project/Final Project.csproj
@@ -52,6 +52,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="View\dashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\dashboard.Designer.cs">
+      <DependentUpon>dashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\login.Designer.cs">
+      <DependentUpon>login.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\mainForm.cs">
       <SubType>Form</SubType>
     </Compile>
