--- a/Final Project/Final Project.csproj
+++ b/Final Project/Final Project.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="View\daftar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\daftar.Designer.cs">
+      <DependentUpon>daftar.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\FormDashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\daftar.resx">
+      <DependentUpon>daftar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\login.resx">
       <DependentUpon>login.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Group 1.png" />
+    <None Include="Resources\el_ok-circle.png" />
     <None Include="Resources\Continue Button Container.png" />
     <None Include="Resources\hugeicons_lock.png" />
     <None Include="Resources\Email Icon Container1.png" />
