--- a/Final Project/Final Project.csproj
+++ b/Final Project/Final Project.csproj
@@ -58,11 +58,11 @@
     <Compile Include="View\daftar.Designer.cs">
       <DependentUpon>daftar.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\FormDashboard.cs">
+    <Compile Include="View\FormBeranda.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\FormDashboard.Designer.cs">
-      <DependentUpon>FormDashboard.cs</DependentUpon>
+    <Compile Include="View\FormBeranda.Designer.cs">
+      <DependentUpon>FormBeranda.cs</DependentUpon>
     </Compile>
     <Compile Include="View\login.cs">
       <SubType>Form</SubType>
@@ -94,8 +94,8 @@
     <EmbeddedResource Include="View\login.resx">
       <DependentUpon>login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\FormDashboard.resx">
-      <DependentUpon>FormDashboard.cs</DependentUpon>
+    <EmbeddedResource Include="View\FormBeranda.resx">
+      <DependentUpon>FormBeranda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
