--- a/Final Project/Final Project.csproj
+++ b/Final Project/Final Project.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\PembayaranController.cs" />
     <Compile Include="Model\Context\DbContext.cs" />
     <Compile Include="Model\Entity\Pembayaran.cs" />
     <Compile Include="Model\Repository\PembayaranRepository.cs" />
