--- a/Final Project/Final Project.csproj
+++ b/Final Project/Final Project.csproj
@@ -99,6 +99,12 @@
     </Compile>
     <Compile Include="Controller\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\popUpEditPembayaran.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\popUpEditPembayaran.Designer.cs">
+      <DependentUpon>popUpEditPembayaran.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -126,6 +132,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\popUpEditPembayaran.resx">
+      <DependentUpon>popUpEditPembayaran.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
