--- a/Final Project/Final Project.csproj
+++ b/Final Project/Final Project.csproj
@@ -99,11 +99,11 @@
     </Compile>
     <Compile Include="Controller\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\popUpEditPembayaran.cs">
+    <Compile Include="View\popUpPembayaran.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\popUpEditPembayaran.Designer.cs">
-      <DependentUpon>popUpEditPembayaran.cs</DependentUpon>
+    <Compile Include="View\popUpPembayaran.Designer.cs">
+      <DependentUpon>popUpPembayaran.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -133,8 +133,8 @@
     <EmbeddedResource Include="View\mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\popUpEditPembayaran.resx">
-      <DependentUpon>popUpEditPembayaran.cs</DependentUpon>
+    <EmbeddedResource Include="View\popUpPembayaran.resx">
+      <DependentUpon>popUpPembayaran.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
