--- a/Final Project/Final Project.csproj
+++ b/Final Project/Final Project.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Model\Context\DbContext.cs" />
     <Compile Include="Model\Entity\Pembayaran.cs" />
     <Compile Include="Model\Repository\PembayaranRepository.cs" />
+    <Compile Include="View\about.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\about.Designer.cs">
+      <DependentUpon>about.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\daftar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\about.resx">
+      <DependentUpon>about.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\daftar.resx">
       <DependentUpon>daftar.cs</DependentUpon>
     </EmbeddedResource>
